# f1tenth_manual

./: CMakeLists.txt  LICENSE  PurePursuit.md  README.md  Vicon_PID_Guide.md
base/: .controller.swp  base.py  base_databuffer.py  base_wifi.py  controller.py  controller_config.py  expo.py  gearselector.py  steeringwheelread.py
base/src/: DataBuffer.hpp  Message.hpp  PIDController.hpp  PurePursuit.hpp  TrajectoryPIDController.hpp  ViconClient.hpp  ZenohCommunicator.hpp  base.cpp  base_purepursuit.cpp  base_vicon_purepursuit.cpp
controller/: config.py  controller.py
controller_debug/: .steeringwheelread.py.swp  config.py  controller.py  readcontroller.py
python/: trajectory_20260120_103556.csv  trajectory_20260120_103556.hpp  trajectory_20260120_103556.json  trajectory_drawer.py
rover/: dshot_serial.py  rover.cpp  rover.py  rover_databuffer.py  rover_wifi.py  serial_driver.py
